# HyperFaaS

./: .dockerignore  .gitignore  .golangci.yml  Dockerfile  README.md  compose.yaml  database.Dockerfile  fakeworker.Dockerfile  full-compose.yaml  function.Dockerfile  go.mod  go.sum  justfile  leaf.Dockerfile  test-compose.yaml  testClient.Dockerfile  worker.Dockerfile
benchmarks/: analyse.py  analyse_old.py  analysis.py  data_loader.py  import.py  main.py  plot.py  process.py  pyproject.toml
config/: hyperfaas-haproxy-grpc-compose.cfg
hyperFakeModel/examples/: .gitignore  README.md  pyproject.toml
hyperFakeModel/examples/configs/: model_config.yaml
hyperFakeModel/examples/data/processed/: training.csv
hyperFakeModel/examples/experiments/notebooks/: ensemble_models_example.ipynb  linear.ipynb  linear_resource.ipynb  neural_networks_example.ipynb
hyperFakeModel/examples/experiments/results/: model_comparison_20250525_181944.csv  training_results_20250525_181944.json
hyperFakeModel/examples/experiments/results/trained_models_20250525_181944/deep_neural_network/: metadata.json  model.pth
hyperFakeModel/examples/experiments/results/trained_models_20250525_181944/gradient_boosting/: metadata.json  models.pkl
hyperFakeModel/examples/experiments/results/trained_models_20250525_181944/lasso_regression/: metadata.json  model.pkl
hyperFakeModel/examples/models/neural/: neural_networks.py
hyperFakeModel/examples/models/regression/: linear_models.py
hyperFakeModel/examples/src/data_processing/: process.py
hyperFakeModel/examples/utils/: log.py
(+354 files in other folders)
